<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Profile.AccountSettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/myToolBar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="?attr/colorOnPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/ivClose"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="12dp"
                android:backgroundTint="@color/white"
                android:src="@drawable/ic_cross"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appBarTextViewEditProfile"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/ivApprove"
                app:layout_constraintStart_toEndOf="@+id/ivClose"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/ivApprove"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="12dp"
                android:backgroundTint="@color/white"
                android:src="@drawable/ic_select_blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivChangePhoto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/default_ava"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout" />

    <TextView
        android:id="@+id/tvChangePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changePhotoProfileTextView"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="@+id/ivChangePhoto"
        app:layout_constraintStart_toStartOf="@+id/ivChangePhoto"
        app:layout_constraintTop_toBottomOf="@+id/ivChangePhoto" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEtName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="16dp"
        app:boxStrokeColor="@color/ultra_grey"
        app:hintTextColor="@color/ultra_grey"
        android:textColorHint="@color/ultra_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvChangePhoto" >

        <EditText
            android:id="@+id/etFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nameHintEditTextProfileEdit"
            android:paddingStart="4dp"
            android:paddingEnd="-1dp"
            android:layout_gravity="start"
            android:textCursorDrawable="@null"
            android:background="@color/white"
            android:inputType="text|textCapSentences"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvChangePhoto" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEtUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/ultra_grey"
        app:hintTextColor="@color/ultra_grey"
        android:textColorHint="@color/ultra_grey"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilEtName" >

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintNickname"
            android:paddingStart="4dp"
            android:paddingEnd="-1dp"
            android:inputType="text|textCapSentences"
            android:maxLines="1"
            android:textCursorDrawable="@null"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEtSite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/ultra_grey"
        app:hintTextColor="@color/ultra_grey"
        android:textColorHint="@color/ultra_grey"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilEtUsername">

        <EditText
            android:id="@+id/etWebSite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:paddingEnd="-1dp"
            android:hint="@string/hintWebsite"
            android:textCursorDrawable="@null"
            android:layout_gravity="start"
            android:gravity="start"
            android:background="@color/white"
            android:inputType="textUri"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etUserName" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEtBio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/ultra_grey"
        app:hintTextColor="@color/ultra_grey"
        android:textColorHint="@color/ultra_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilEtSite">

        <EditText
            android:id="@+id/etBio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:paddingEnd="-1dp"
            android:hint="@string/hintBio"
            android:background="@color/white"
            android:inputType="text|textCapSentences"
            android:maxLines="1"
            android:textCursorDrawable="@null"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etSite" />


    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvProfessionalAcc"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:gravity="center|start"
        android:text="@string/textViewSwitchToProAccount"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:background="@drawable/bg_grey_only_top"
        android:layout_marginTop="24dp"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilEtBio" />

    <TextView
        android:id="@+id/tvCreateAvatar"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:text="@string/textViewCreateAvatar"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:gravity="center|start"
        android:maxLines="1"
        android:background = "@drawable/bg_grey_bot_and_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProfessionalAcc" />

    <TextView
        android:id="@+id/tvPersonalInfo"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:background="@drawable/bg_grey_only_bot"
        android:gravity="center|start"
        android:maxLines="1"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:text="@string/textViewPersonalInformationSettings"
        android:textColor="@color/blue"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCreateAvatar" />




</androidx.constraintlayout.widget.ConstraintLayout>